Added traditional-rice-puto.html and updated index
- Added traditional-rice-puto.html with contents
- Modified index
- Added traditional_rice_puto.png

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="./recipes/one-pot_spaghetti.html">One-pot Spaghetti</a></li>
-        <li><a href="./recipes/pork-sisig.html">Pork Sisig</a></li>
+        <li><a href="./recipes/pork-sisig.html">Pork</a></li>
+        <li><a href="./recipes/traditional-rice-puto.html">Traditional Rice Puto</a></li>
     </ul>
 </body>
 
